fix visual regressions for margin-collapsed h5 and h6

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -179,17 +179,10 @@
     @extend %vf-heading-5-6-heading-subsequent-placement;
 
     font-size: #{map-get($font-sizes, h5-mobile)}rem;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-h5;
     line-height: map-get($line-heights, h5-mobile);
     margin-bottom: map-get($sp-after, h5-mobile) - map-get($nudges, h5-mobile);
     padding-top: map-get($nudges, h5-mobile);
-
-    @media (min-width: $breakpoint-heading-threshold) {
-      font-size: #{map-get($font-sizes, h5)}rem;
-      line-height: map-get($line-heights, h5);
-      margin-bottom: map-get($sp-after, h5) - map-get($nudges, h5);
-      padding-top: map-get($nudges, h5);
-    }
 
     &.u-no-margin--bottom {
       @extend %u-no-margin--bottom--h5;
@@ -208,17 +201,10 @@
 
     font-size: #{map-get($font-sizes, h6-mobile)}rem;
     font-style: italic;
-    font-weight: $font-weight-regular-text;
+    font-weight: $font-weight-h6;
     line-height: map-get($line-heights, h6-mobile);
     margin-bottom: map-get($sp-after, h6-mobile) - map-get($nudges, h6-mobile);
     padding-top: map-get($nudges, h6-mobile);
-
-    @media (min-width: $breakpoint-heading-threshold) {
-      font-size: #{map-get($font-sizes, h6)}rem;
-      line-height: map-get($line-heights, h6);
-      margin-bottom: map-get($sp-after, h6) - map-get($nudges, h6);
-      padding-top: map-get($nudges, h6);
-    }
 
     &.u-no-margin--bottom {
       @extend %u-no-margin--bottom--h6;
